--- a/static/index.html
+++ b/static/index.html
@@ -2,21 +2,17 @@
 
 <%block name='title_block'>CMAA Computer Literacy Course</%block>
 
-<header>
-  <h1>Computer Literacy Course</h1>
-  <p>
-    Brought to you by the <a href='http://chinesemutualaid.org'>Chinese Mutual Aid Association</a>
-  </p>
-</header>
+<h1>Computer Literacy Course</h1>
+<p>
+  Brought to you by the <a href='http://chinesemutualaid.org'>Chinese Mutual Aid Association</a>
+</p>
 
-<main>
-  <h3>Classes</h3>
+<h3>Classes</h3>
 
-  <ul>
-    % for i in range(1, 5):
-    <li>
-      <a href='/lesson-${i}'>Lesson ${i}</a>
-    </li>
-    % endfor
-  </ul>
-</main>
+<ul>
+  % for i in range(1, 5):
+  <li>
+    <a href='/lesson-${i}/'>Lesson ${i}</a>
+  </li>
+  % endfor
+</ul>
