Properly render the slides for reveal.js

--- a/static/_slides.html
+++ b/static/_slides.html
@@ -14,9 +14,8 @@
 </script>
 </%block>
 
-<div class="reveal">
-  <div class="slides">
-    <section>Slide 1</section>
-    <section>Slide 2</section>
+<div class='reveal'>
+  <div class='slides'>
+    ${render_slides(PATH.parent.parent / 'slides.md')}
   </div>
 </div>
