Set up the site root so that links work correctly when published

--- a/static/_slides.html
+++ b/static/_slides.html
@@ -1,14 +1,14 @@
 <%inherit file='_base.html'/>
 
 <%block name='extrastyle'>
-<link rel='stylesheet' href='/css/reveal.css'>
-<link rel='stylesheet' href='/css/black.css' id='theme'>
+<link rel='stylesheet' href='${ROOT}/css/reveal.css'>
+<link rel='stylesheet' href='${ROOT}/css/black.css' id='theme'>
 </%block>
 
 <%block name='footer'></%block>
 
 <%block name='extrascript'>
-<script src='/js/reveal.js'></script>
+<script src='${ROOT}/js/reveal.js'></script>
 <script>
   Reveal.initialize();
 </script>
