--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
 <ul>
   % for i in range(1, 5):
   <li>
-    <a href='/lesson-${i}/'>Lesson ${i}</a>
+    <a href='lesson-${i}/'>Lesson ${i}</a>
   </li>
   % endfor
 </ul>
