Fix the Home link

--- a/static/_lesson.html
+++ b/static/_lesson.html
@@ -10,7 +10,7 @@
 </%block>
 
 <div class='nav'>
-  <a href='/'>Home</a>
+  <a href='${ROOT}/'>Home</a>
   |
   <a href='slides/'>View slideshow</a>
 </div>
