Make extensive changes to lesson 1

--- a/static/_slides.html
+++ b/static/_slides.html
@@ -16,6 +16,6 @@
 
 <div class='reveal'>
   <div class='slides'>
-    ${render_slides(PATH.parent.parent / 'slides.md')}
+    ${render_slides(PATH.parent / 'slides.md')}
   </div>
 </div>
