--- a/static/_lesson.html
+++ b/static/_lesson.html
@@ -6,13 +6,35 @@
   margin: 1rem 0;
   font-size: 1.5rem;
 }
+img {
+  border: 1px solid gray;
+}
+hr {
+  border: 2px dashed gray;
+  margin: 4rem 0;
+}
+.slides {
+  margin-bottom: 5rem;
+  font-size: 2rem;
+}
 </style>
+</%block>
+
+<%block name='extrascript'>
+<script>
+$('body').on('click', 'a.external', function(evt) {
+  evt.preventDefault()
+  window.open(evt.target.href)
+})
+</script>
 </%block>
 
 <div class='nav'>
   <a href='${ROOT}/'>Home</a>
   |
-  <a href='slides/'>View slideshow</a>
+  <a href='slides.html'>View slideshow</a>
 </div>
 
+<div class='slides'>
 ${render_markdown_file(PATH.parent / 'slides.md')}
+</div>
