--- a/static/_base.html
+++ b/static/_base.html
@@ -4,7 +4,9 @@
 <meta charset='utf-8'>
 <meta http-equiv='x-ua-compatible' content='ie=edge'>
 <title><%block name='title_block'></%block></title>
-<meta name='description' content=''>
+<meta name='description' content='CMAA computer literacy course'>
+<link rel="shortcut icon" href="${ROOT}/favicon.jpg" type="image/jpeg">
+<link rel="apple-touch-icon" href="${ROOT}/favicon.jpg" type="image/jpeg">
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
 <link rel='stylesheet' href='${ROOT}/css/global.css'>
