--- a/static/_slides.html
+++ b/static/_slides.html
@@ -10,19 +10,42 @@
 .slides img:hover {
   cursor: zoom-in;
 }
+#image-modal img {
+  border: 1px solid gray;
+}
 </style>
 </%block>
-
-<%block name='footer'></%block>
 
 <%block name='extrascript'>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.4.1/js/reveal.min.js'></script>
 <script>
-  Reveal.initialize()
-  Reveal.configure({slideNumber: 'c/t'})
+Reveal.initialize()
+Reveal.configure({slideNumber: 'c/t'})
+$(document).on('click', 'img', function(evt) {
+  let img = evt.target
+  $('#image-modal').modal()
+  $('#image-modal .modal-title').text(img.alt)
+  $('#image-modal img').attr('src', img.src)
+})
 </script>
 </%block>
+
+<%block name='footer'></%block>
 
 <div class='reveal'>
   ${render_slides(PATH.parent / 'slides.md')}
 </div>
+
+<div id="image-modal" class="modal fade" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">?</h4>
+      </div>
+      <div class="modal-body">
+        <img class='img-responsive' src='?'>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
