Use https link for jquery

--- a/static/_base.html
+++ b/static/_base.html
@@ -24,7 +24,7 @@ This site is open source. Content licensed under <a rel='license' href='https://
 </footer>
 </%block>
 
-<script src='http://code.jquery.com/jquery-3.1.1.min.js'></script>
+<script src='https://code.jquery.com/jquery-3.1.1.min.js'></script>
 <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'></script>
 <%block name='extrascript'></%block>
 </body>
